--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,14 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?> 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" android:layout_height="fill_parent">
+	android:layout_width="fill_parent" android:layout_height="fill_parent" >
+
+
 <com.esri.android.map.MapView
       
      android:id="@+id/map" android:layout_width="fill_parent" 
      android:layout_height="fill_parent"
      initExtent="-3093750 1674750 2461250 6124250"
      >
-     
 </com.esri.android.map.MapView>
+
+<LinearLayout
+  android:layout_width="fill_parent"
+  android:layout_height="wrap_content"
+  android:layout_alignParentTop="true"
+  android:background="#b2222222"
+  android:orientation="horizontal"
+  >
+  <LinearLayout
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:paddingLeft="5px"
+       android:layout_gravity="center_vertical"
+  >
+  <EditText android:layout_width="170px" android:id="@+id/search_edit"
+	android:layout_height="35px" android:drawableLeft="@drawable/search_toolbar_button"
+	android:singleLine="true" android:editable="true" android:textSize="15sp" android:hint="搜索"
+    android:background="#E5E5E5"
+/>
+ </LinearLayout>
+  <Button android:id="@+id/places" android:layout_width="wrap_content"
+	  android:layout_height="wrap_content" android:background="@drawable/ic_menu_places" />
+	  
+  <Button android:id="@+id/layers" android:layout_width="wrap_content"
+	  android:layout_height="wrap_content" android:background="@drawable/ic_menu_layers" />
+	  
+  <Button android:id="@+id/mylocation" android:layout_width="wrap_content"
+	  android:layout_height="wrap_content" android:background="@drawable/ic_menu_mylocation" />
+   
+</LinearLayout>
+
 
 <Button android:id="@+id/buttonZoomIn" android:text="放大" 
  android:layout_width="wrap_content" android:layout_height="wrap_content" 
